<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="50dp"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">
        <TextView
            android:text="Register"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />
        <EditText
            android:id="@+id/name"
            android:hint="@string/Nama"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_username"
            android:hint="@string/Username"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_password"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/c_password"
            android:autofillHints=""
            android:hint="Konfirmasi Password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonregister"
            android:textColorHighlight="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_rounded_outline"
            android:text="@string/register" />
    </LinearLayout>

</RelativeLayout>